src/test/ui/consts/miri_unleashed/mutable_references.stderr
warning: skipping const checks
  --> $DIR/mutable_references.rs:28:8
   |
LL |     x: &UnsafeCell::new(42),
   |        ^^^^^^^^^^^^^^^^^^^^

error[E0594]: cannot assign to `*OH_YES`, as `OH_YES` is an immutable static item
  --> $DIR/mutable_references.rs:39:5
   |
LL |     *OH_YES = 99;
   |     ^^^^^^^^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
